fix: small screen horizontal scroll

--- a/src/scss/2022/components/_hero.scss
+++ b/src/scss/2022/components/_hero.scss
@@ -53,10 +53,12 @@
       right: calc(50% - 0.5em);
       height: 2.75em;
       width: 1.875em;
-      opacity: 0;
-      transform: translate(1.875em, -2.75em);
-      animation: hero-line-grow 1000ms var(--default-timing) forwards;
       background: svg('<svg width="290" height="439"><path d="m287 2.327-284 435" stroke="#{color(gray)}" stroke-width="5"/></svg>') no-repeat center / contain;
+      @media (prefers-reduced-motion: no-preference) {
+        opacity: 0;
+        transform: translate(1.875em, -2.75em);
+        animation: hero-line-grow 1000ms var(--default-timing) forwards;
+      }
     }
   }
 
@@ -75,21 +77,23 @@
   &__title-line {
     position: relative;
     z-index: var(--z2);
-    opacity: 0;
-    filter: blur(0.75rem);
-    transform: translateX(-10rem);
-    animation: hero-move-in 1500ms var(--default-timing) forwards;
-
-    &--1 {
-      animation-delay: 150ms;
-    }
-    
-    &--2 {
-      animation-delay: 300ms;
-    }
-
-    &--3 {
-      animation-delay: 450ms;
+    @media (prefers-reduced-motion: no-preference) {
+      opacity: 0;
+      filter: blur(0.75rem);
+      transform: translateX(-10rem);
+      animation: hero-move-in 1500ms var(--default-timing) forwards;
+  
+      &--1 {
+        animation-delay: 150ms;
+      }
+      
+      &--2 {
+        animation-delay: 300ms;
+      }
+  
+      &--3 {
+        animation-delay: 450ms;
+      }
     }
   }
 
@@ -121,37 +125,39 @@
     }
   }
 
-  &__year-number {
-    display: inline-block;
-    animation: hero-year 1500ms var(--default-timing) forwards;
-    
-    &--1 {
-      animation-delay: 150ms;
-      opacity: 0;
-      filter: blur(0.75rem);
-      transform: translateY(-0.75em);
-    }
-
-    &--2 {
-      animation-delay: 350ms;
-      opacity: 0;
-      filter: blur(0.75rem);
-      transform: translateY(0.5em);
-    }
-
-    &--3 {
-      animation-delay: 200ms;
-      opacity: 0;
-      filter: blur(0.75rem);
-      transform: translateY(-0.75em);
-    }
-
-    &--4 {
-      animation-delay: 150ms;
-      animation-duration: 1800ms;
-      opacity: 0;
-      filter: blur(0.75rem);
-      transform: translateY(0.25em);
+  @media (prefers-reduced-motion: no-preference) {
+    &__year-number {
+      display: inline-block;
+      animation: hero-year 1500ms var(--default-timing) forwards;
+      
+      &--1 {
+        animation-delay: 150ms;
+        opacity: 0;
+        filter: blur(0.75rem);
+        transform: translateY(-0.75em);
+      }
+  
+      &--2 {
+        animation-delay: 350ms;
+        opacity: 0;
+        filter: blur(0.75rem);
+        transform: translateY(0.5em);
+      }
+  
+      &--3 {
+        animation-delay: 200ms;
+        opacity: 0;
+        filter: blur(0.75rem);
+        transform: translateY(-0.75em);
+      }
+  
+      &--4 {
+        animation-delay: 150ms;
+        animation-duration: 1800ms;
+        opacity: 0;
+        filter: blur(0.75rem);
+        transform: translateY(0.25em);
+      }
     }
   }
 
@@ -175,11 +181,13 @@
     align-self: center;
     color: var(--color-gray);
 
-    transform-origin: 0 0;
-    filter: blur(0.75rem);
-    opacity: 0;
-    transform: scale(0.5);
-    animation: edition-pop 1000ms 500ms var(--default-timing) forwards;
+    @media (prefers-reduced-motion: no-preference) {
+      transform-origin: 0 0;
+      filter: blur(0.75rem);
+      opacity: 0;
+      transform: scale(0.5);
+      animation: edition-pop 1000ms 500ms var(--default-timing) forwards;
+    }
   }
   
   &__logo {
@@ -187,10 +195,12 @@
     max-width: 11.875rem;
     justify-self: end;
     grid-area: a;
-    opacity: 0;
-    filter: blur(0.75rem);
-    transform: translateX(4rem);
-    animation: hero-move-in 2000ms var(--default-timing) forwards;
+    @media (prefers-reduced-motion: no-preference) {
+      opacity: 0;
+      filter: blur(0.75rem);
+      transform: translateX(var(--space-limiter-margin) - 0.25rem);
+      animation: hero-move-in 1000ms var(--default-timing) forwards;
+    }
   }
   
   &__sparkbox-link {
